--- a/index.html
+++ b/index.html
@@ -241,38 +241,13 @@
         </div>
     </section>
 
-    <!-- デモセクション -->
-    <section class="demo bg-gradient py-5" id="demo">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5">
-                    <div class="demo-content text-white">
-                        <h2 class="fw-bold mb-4">TalentAIの<br>実際の動作をご覧ください</h2>
-                        <p class="mb-4">最先端のAI技術がどのように採用業務を変革するか、デモ動画でご確認いただけます。</p>
-                        <a href="#" class="btn btn-light btn-lg rounded-pill">
-                            <i class="fas fa-play me-2"></i> デモを再生
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-7">
-                    <div class="demo-video">
-                        <img src="assets/images/demo-preview.png" alt="デモ動画" class="img-fluid rounded-4 shadow-lg">
-                        <div class="play-button">
-                            <i class="fas fa-play"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- 機能セクション -->
     <section class="functions py-5" id="functions">
         <div class="container">
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary text-uppercase">機能</h6>
                 <h2 class="display-5 fw-bold">TalentAIの<span class="text-gradient">主要機能</span></h2>
-                <p class="lead">採用プロセスの全段階をサポートする包括的な機能群</p>
+                <p class="lead">採用プロセスの全段階をサポートする包括的な機能</p>
             </div>
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4">
