--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 hero-text">
-                    <h1 class="display-4 fw-bold mb-4">採用業務を<span class="text-gradient">AI</span>で革新する</h1>
+                    <h1 class="display-4 fw-bold mb-4">採用業務を<span class="text-gradient">AI</span>で<br>革新する</h1>
                     <p class="lead mb-4">TalentAIは、最先端のAI技術を活用した人材マッチングプラットフォームです。採用担当者の業務効率化と最適な人材発掘を同時に実現します。</p>
                     <div class="hero-cta">
                         <a href="#waiting-list" class="btn btn-primary btn-lg rounded-pill me-3">無料で先行登録する</a>
